set(basic normal_vec+arctan_func+histo_max_trans_icp)
cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(${basic})
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (${basic} ${basic}.cpp f_max.cpp histo.cpp normal_angle.cpp)
target_link_libraries (${basic} ${PCL_LIBRARIES})
# For OpenMP
find_package(OpenMP REQUIRED)
if(OpenMP_FOUND)
    message(STATUS "Use OpenMP")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()