set(basic normal_vec+arctan_func+histo_max_trans_icp_if)
cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(${basic})
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (${basic} ${basic}.cpp f_max.cpp histo.cpp normal_angle.cpp)
target_link_libraries (${basic} ${PCL_LIBRARIES})