cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(normal_calc_argv)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (normal_calc_argv main.cpp)
target_link_libraries (normal_calc_argv ${PCL_LIBRARIES})
